play pause logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">UNI Music Player</string>
     <string name="nav_header_username">My Music</string>
     <string name="buttonAllSongs">All songs</string>
-    <string name="button2">Favorites</string>
-    <string name="button3">Playlists</string>
-    <string name="button4">Settings</string>
+    <string name="btnFav">Favorites</string>
+    <string name="btnPlaylists">Playlists</string>
+    <string name="btnSettings">Settings</string>
     <string name="background_image_str">Background image for album art</string>
     <string name="play_pause">play or pause</string>
     <string name="skip_next">skip to next</string>
